# mcp-server-python-template

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/mcp_server/: server.py
