[project]
name = "mcp-server-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.5.0",
    "mcp>=1.13.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# Run with: `uv run mcp-server`
mcp-server = "mcp_server.server:main"
